filt_timerexpire_l(): re-insert restarted timer into head instead of tail

of the resumed timers list, so that kqtimer_proc_continue() does not
iterated into the same timer again.

PR:	293141
Reviewed by:	markj
Sponsored by:	The FreeBSD Foundation
MFC after:	3 days
Differential revision:	https://reviews.freebsd.org/D55264